crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__any_of.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"anyOf\":[{\"type\":\"string\"},{\"type\":\"number\"}]}"
expression: is_valid_body(schema)
---
(instance.is_string() || instance.is_number())
