crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__any_of_false_member.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"anyOf\":[false,{\"type\":\"string\"}]}"
expression: is_valid_body(schema)
---
(false || instance.is_string())
