crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__array_unique_and_contains.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"contains\":{\"type\":\"integer\"},\"type\":\"array\",\"uniqueItems\":true}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                (jsonschema::__private::unique_items::is_unique(arr))
                    && (arr
                        .iter()
                        .any(|instance| match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        }))
            }
            _ => false,
        }
