crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__boolean_false_root.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "false"
expression: is_valid_body(schema)
---
false
