crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__boolean_true_root.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "true"
expression: is_valid_body(schema)
---
true
