crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__const_str.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"const\":\"hello\"}"
expression: is_valid_body(schema)
---
instance.as_str() == Some("hello")
