crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__const_str_with_type.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"const\":\"hello\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
instance.as_str() == Some("hello")
